--- a/components/landing/Landing.css
+++ b/components/landing/Landing.css
@@ -400,3 +400,91 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6 {
     margin-bottom: 24px;
  }
 }
+
+/* footer1.less */
+.footer1-wrapper {
+  background: #001529;
+  overflow: hidden;
+  position: relative;
+  min-height: 360px;
+  color: #999;
+}
+.footer1-wrapper .footer1 .home-page {
+  padding: 64px 24px 80px;
+}
+.footer1-wrapper .block {
+  padding: 0 32px;
+}
+.footer1-wrapper .block .logo {
+  max-width: 180px;
+}
+.footer1-wrapper .block .slogan {
+  font-size: 12px;
+  margin-top: -20px;
+}
+.footer1-wrapper .block >h2 {
+  margin-bottom: 24px;
+  color: #ccc;
+}
+.footer1-wrapper .block a {
+  color: #999;
+  margin-bottom: 12px;
+  float: left;
+  clear: both;
+}
+.footer1-wrapper .block a:hover {
+  color: #1890ff;
+}
+.footer1-wrapper .copyright-wrapper {
+  width: 100%;
+  border-top: 1px solid rgba(233,233,233,0.1);
+}
+.footer1-wrapper .copyright-wrapper .home-page {
+  padding: 0 24px;
+  overflow: hidden;
+}
+.footer1-wrapper .copyright-wrapper .copyright {
+  height: 80px;
+  text-align: center;
+  line-height: 80px;
+}
+@media screen and (max-width: 767px) {
+  .footer1 {
+    min-height: 550px;
+ }
+  .footer1-wrapper .footer1 .home-page {
+    padding: 64px 24px 32px;
+ }
+  .footer1 .logo {
+    margin: 0 auto 24px;
+ }
+  .footer1 .block {
+    text-align: center;
+    margin-bottom: 32px;
+    padding: 0;
+ }
+  .footer1 >ul {
+    width: 90%;
+    margin: 20px auto 0;
+    padding: 10px 0;
+ }
+  .footer1 >ul >li {
+    width: 100%;
+ }
+  .footer1 >ul >li h2 {
+    margin-bottom: 10px;
+ }
+  .footer1 >ul >li li {
+    display: inline-block;
+    margin-right: 10px;
+ }
+  .footer1 .copyright-wrapper .home-page {
+    padding: 0;
+ }
+  .footer1 .copyright-wrapper .home-page .copyright {
+    font-size: 12px;
+ }
+  .footer1 .copyright span {
+    width: 90%;
+ }
+}
