--- a/styles/vars.css
+++ b/styles/vars.css
@@ -1,5 +1,9 @@
 :root {
   --backgroundColor: #f7f7f7;
-  --primaryColor: #191a1b;
+  --primaryColor: #1890ff;
   --textColorSecondary: rgba(0, 0, 0, 0.45);
+
+  --amplify-primary-color: var(--primaryColor);
+  --amplify-primary-tint: #0064c2;
+  --amplify-primary-shade: #0064c2;
 }
